--- a/example/sio-microphone/sio-microphone.csproj
+++ b/example/sio-microphone/sio-microphone.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-      <TargetFramework>netcoreapp2.1</TargetFramework>
+      <TargetFramework>net6.0</TargetFramework>
       <OutputType>Exe</OutputType>
       <RootNamespace>siomicrophone</RootNamespace>
       <AssemblyName>sio-microphone</AssemblyName>
