--- a/example/sio-sine/sio-sine.csproj
+++ b/example/sio-sine/sio-sine.csproj
@@ -1,6 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-      <TargetFramework>netcoreapp2.1</TargetFramework>
+      <TargetFramework>net6.0</TargetFramework>
       <OutputType>Exe</OutputType>
       <RootNamespace>siosine</RootNamespace>
       <AssemblyName>sio-sine</AssemblyName>
